--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="spanish">spanish</string>
     <string name="german">german</string>
     <string name="translation">Translation</string>
+    <string name="write_something">Write Something</string>
+    <string name="translationstring">Translation</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
